# Pittsburgh-MTA

./: .gitignore  .pylintrc  LICENSE  README.md  ds  load_track.py  pyproject.toml  test.py  track_model_ui.py  traincontrollersw_ui.py
.github/workflows/: CI.yml  commit_graph.txt
documentation/: github_workflow.md  poetry_guide.md
src/main/: main.py  signals.py  test.py
src/main/CTC/: AutoGreen.csv  BlueSchedule.csv  CTC_UI.py  GreenLine.csv  GreenLine.xlsx  LineInformation.xlsx  RedLine.csv  RedLine.xlsx  backup.py  green_auto_for_code.csv  signals.py  test.py
src/main/TrackController/: classes_ALL.puml  explanation.py  greenLine.xlsx  new_testbench.ui  packages_ALL.puml  plc_green.txt  plc_red.txt  redLine.xlsx  test.py  testbench.py  testbench.ui  trackcontrol.py  trackcontrollersignals.py  trackcontrolui.py  ~$greenLine.xlsx
src/main/TrackModel/: Station.py  TestBench.py  Track Layout & Vehicle Data vF2.xlsx  Track.py  TrackData.py  TrackModel.py  load_track.py  track_model.py  track_model_ui.py
src/main/TrainControllerHW/: TrainControllerBackend.ino  hwtc_main.py  hwtc_tb.py
src/main/TrainControllerSW/: HomepageUI.py  tcsw_functions.py  tcsw_main.py  tcsw_mainv2.py  tcsw_outputsignal.py  tcsw_tb.py  tcsw_time.py  tcsw_train_attributes.py  tcsw_ui.py  tcsw_unittest.py  track_layout.xlsx  traincontrollersw_ui.py
src/main/TrainModel/: Signals.py  TrainModel_Calculations.py  TrainModel_Functions.py  Train_Model.py  Train_Model_Test.py  old_train.py
src/tests/: test_ctc.py  test_ghwf.py
src/tests/TrackController/: test_track_control
