[tool.poetry]
name = "ece-1140"
version = "0.1.0"
description = "Pittsburgh MTA Group 1"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyqt5 = "^5.15.9"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
py-mon = "^1.1.1"
qtwidgets = "^1.1"
qtpy = "^2.4.1"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
